# Map-Bridge-Addon

./: .gitignore  .gitmodules  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
scripts/: _addon_builder_utils.py  build.py  run_in_blender.py
src/: __init__.py  _types.py  operators.py  panel.py  properties.py
src/google_earth/: _utils.py  operator.py  properties.py  register_binaries.py
src/osm/: operator.py
